@startuml
skinparam monochrome true

skinparam Shadowing false
skinparam LineType ortho

skinparam nodesep 15
skinparam ranksep 30

class SDL_main #Linen 
SDL_main -- streaming_server 

class encode_to_movie {
	+encode_to_movie(ostream socket, int in_width, int in_height, int fps)
	+add_frame(char[] pixels)
	+add_instant(char[] audio_stream, int audio_stream_size, int audio_stream_num_samples)
	-{static} int write_packet(char[] buf, int buf_size)
}

streaming_server -- encode_to_movie

class streaming_server {
	+start(ushort port)
	+send_video_frame(char[] pixels)
	+send_audio_interval(char[] audio_stream, int audio_stream_size, int audio_stream_num_samples)
	+generate_key_event(char[] key, bool pressed)
	-send(ostream socket)
}
@enduml